fix client logos on mobile

--- a/style.css
+++ b/style.css
@@ -359,8 +359,10 @@ h1.clients {
     margin-bottom: 0;
 }
 
+@media (min-width: 577px) {
 #logo-table-xs {
     display: none;
+}
 }
 
 @media (min-width: 993px) {
@@ -407,6 +409,8 @@ h1.clients {
 @media (max-width: 576px) {
     #clients {
         margin: 58px 30px;
+        display: flex;
+        justify-content: center;
     }
     #logo-table {
         display: none;
